@@ -22,7 +22,7 @@ $(LOCAL_INSTALLED_MODULE): PRIVATE_SRC  := $(LOCAL_BUILT_MODULE)
 $(LOCAL_INSTALLED_MODULE): PRIVATE_DEST := $(NDK_APP_DEST)
 $(LOCAL_INSTALLED_MODULE): PRIVATE_DST  := $(LOCAL_INSTALLED_MODULE)
 
-$(LOCAL_INSTALLED_MODULE): $(LOCAL_BUILT_MODULE)
+$(LOCAL_INSTALLED_MODULE): $(LOCAL_BUILT_MODULE) clean-installed-binaries
 	@ echo "Install        : $(PRIVATE_NAME) => $(PRIVATE_DEST)"
 	$(hide) mkdir -p $(PRIVATE_DEST)
 	$(hide) install -p $(PRIVATE_SRC) $(PRIVATE_DST)
